shared/styles/application.scss
@import "~chartist/dist/scss/chartist.scss";
@import "./quill.min.css";

:root {
    --primary:#292F5B;
    --primary-dark: #3A4174;
    --secondary: #1565c0;
    --secondary-dark: #003c8f;
    --ternary: #ff6090;
    --ternary-dark: #8c0032;
    --font-light: #fff;
    --font-dark: #000;
    --success: #43a047;
    --pending: #ffb300;
    --error: #e53935;
    --bg: #f0f0f0;
    --bg-dark: #212121;
    --font: 'Helvetica Neue', 'Roboto', Helvetica, sans-serif;
    --heading-font: Georgia, 'Times New Roman', Times, serif;
}

@media screen {
    .print-only {
        display: none !important;
    }
}

@media print {
    .screen-only {
        display: none !important;
    }
}

html,
body {
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
    font-size: 16px;
    background-image: url("data:image/svg+xml,%3Csvg width='36' height='36' viewBox='0 0 36 36' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M36 0H0v36h36V0zM15.126 2H2v13.126c.367.094.714.24 1.032.428L15.554 3.032c-.188-.318-.334-.665-.428-1.032zM18 4.874V18H4.874c-.094-.367-.24-.714-.428-1.032L16.968 4.446c.318.188.665.334 1.032.428zM22.874 2h11.712L20 16.586V4.874c1.406-.362 2.512-1.468 2.874-2.874zm10.252 18H20v13.126c.367.094.714.24 1.032.428l12.522-12.522c-.188-.318-.334-.665-.428-1.032zM36 22.874V36H22.874c-.094-.367-.24-.714-.428-1.032l12.522-12.522c.318.188.665.334 1.032.428zm0-7.748V3.414L21.414 18h11.712c.362-1.406 1.468-2.512 2.874-2.874zm-18 18V21.414L3.414 36h11.712c.362-1.406 1.468-2.512 2.874-2.874zM4.874 20h11.712L2 34.586V22.874c1.406-.362 2.512-1.468 2.874-2.874z' fill='%23000000' fill-opacity='0.1' fill-rule='evenodd'/%3E%3C/svg%3E");
}

body {
    background-color: #f0f0f0;
}

body.dark {
    background-color: #404040;
}

* {
    user-select: none;
    font-family: var(--font);
    box-sizing: border-box;
}

@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: local('Material Icons'),
      local('MaterialIcons-Regular'),
      url(../assets/fonts/MaterialIcons-Regular.ttf) format('truetype');
}

@font-face {
    font-family: 'Material Icons Outlined';
    font-style: normal;
    font-weight: 400;
    src: local('Material Icons Outlined'),
      local('MaterialIconsOutlined-Regular'),
      url(../assets/fonts/MaterialIconsOutlined-Regular.otf) format('opentype');
}

.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 1.5em;
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
  
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
    /* Support for Safari and Chrome. */
    text-rendering: optimizeLegibility;
  
    /* Support for Firefox. */
    -moz-osx-font-smoothing: grayscale;
  
    /* Support for IE. */
    font-feature-settings: 'liga';
}

.material-icons-outlined {
    font-family: 'Material Icons Outlined';
    font-weight: normal;
    font-style: normal;
    font-size: 1.5em;
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
  
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
    /* Support for Safari and Chrome. */
    text-rendering: optimizeLegibility;
  
    /* Support for Firefox. */
    -moz-osx-font-smoothing: grayscale;
  
    /* Support for IE. */
    font-feature-settings: 'liga';
}

span.highlight {
    color: var(--primary);
}

/*=======================*\
||    Font size styles   ||
\*=======================*/

.fs {
    &-small {
        font-size: 0.8rem;
    }
    &-normal {
        font-size: 1rem;
    }
    &-big {
        font-size: 1.2rem;
    }
    &-large {
        font-size: 1.5rem;
    }
}

/*========================*\
||   Application styles   ||
\*========================*/

.info-block {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin: 0.5em auto;
    width: 100%;
    min-height: 6em;

    .icon {
        display: flex;
        align-items: center;
        justify-content: center;
        height: 1.2em;
        width: 1.2em;
        font-size: 2em;

        a-spinner {
            font-size: 0.25em;
        }
    }

    .text {
        margin: 0.5em;
        text-align: center;
    }
}

.center,
[center] {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/*=====================*\
||  TinyMCE overrides  ||
\*=====================*/

div.tox-silver-sink {
    z-index: 9999;

    .tox-notification {
        display: none;
    }
}

div.tox-editor-container {
    .tox-menubar {
        button:first-child {
            display: none;
        }
    }
}

div.tox-tinymce {
    @media screen and (max-width: 639px) {
        min-height: 20em;
    }
}

@keyframes crossfade {
    0% {
        background-color: #d32f2f;
    }
    20% {
        background-color: #7b1fa2;
    }
    40% {
        background-color: #1976d2;
    }
    60% {
        background-color: #00796b;
    }
    80% {
        background-color: #ff8f00;
    }
    100% {
        background-color: #d32f2f;
    }
}

#placeos .mat-radio-label-content {
    font-weight: normal;
}

